fixed issue with the textboxes overflowing the form in contact us page

--- a/src/app/Pages/about/about.component.css
+++ b/src/app/Pages/about/about.component.css
@@ -84,30 +84,20 @@
 
 .middle-section .first-image{
     z-index: 10;
-    /* left: 0; */
-    /* width: 708px;
-    height: 425px; */
     width: 56%;
     height: 425px;
     left: 6%;
 }
 
 .middle-section .second-image{
-    z-index: 20;
-    /* width: 400px;
-    height: 200px;
-    right: -20px; */
-    /* width: 504px; */
+    z-index: 30;
     width: 38%;
     height: 329px;
     left: 60%;
 }
 
 .middle-section .third-image{
-    /* width: 400px;
-    height: 300px; */
-    z-index: 40;
-    /* width: 358px; */
+    z-index: 20;
     width: 30%;
     height: 60%;
     left: 50%;
