--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,9 @@
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color:#333 }
-
+*{
+  box-sizing: border-box;
+}
 .cart-active {
     color: var(--secondary);
     text-decoration: underline var(--secondary);
